add_library(parser
        STATIC
        parser.cpp)
add_library(storage
        STATIC
        disk_manager.cpp
        table.cpp
        database.cpp
        bpt.cpp)
add_library(executor
        STATIC
        executor.cpp)
add_library(server
        STATIC
        server.cpp
        database.cpp)
target_link_libraries(
        server
        parser
        executor
)
target_link_libraries(
        executor
        storage
        parser
)